# DPSMSM

./: .pre-commit-config.yaml  Makefile  README.rst  db.sqlite3  docker-compose.dev.yml  pyproject.toml
dpsmsm/: manage.py
dpsmsm/project/: settings.py  urls.py
