[tool.poetry]
name = "dpsmsm"
version = "0.1.0"
description = ""
authors = ["abdurrakib01 <rakib15-13656@diu.edu.bd>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.3"
djangorestframework = "^3.15.0"
django-filter = "^24.1"
psycopg2-binary = "^2.9.9"
django-environ = "^0.11.2"

[tool.poetry.dev-dependencies]
pre-commit = "^3.6.2"
colorlog = "^6.8.2"

[tool.isort]
multi_line_output = 5
line_length = 119

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
